--- a/backend/BackUp/plano/src/main/resources/application.properties
+++ b/backend/BackUp/plano/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/plano?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Saikumar@14
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.show-sql=false
